fixed vertical scrollbar and colors in all but sidebar. JS JM

--- a/css/base.css
+++ b/css/base.css
@@ -25,8 +25,12 @@
 
 body,
 html {
-    height: 100vh;
+    max-height: 100%;
     max-width: 100%;
+}
+
+body {
+    font-family: "Press Start 2P";
 }
 
 main {
@@ -34,4 +38,10 @@ main {
     width: 100%;
     height: calc(100vh - (var(--header-height)));
     background-color: palegreen;
+}
+
+@media (min-width: 768px) {
+    main {
+        height: calc(100vh - ((var(--header-height) * 1.5)));
+    }
 }
